Make sure promote button is properly aligned regardless of the font

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -226,6 +226,11 @@
     }
   }
 
+  .p-text-icon {
+    display: inline-block;
+    width: 14px;
+  }
+
   .p-action-button {
     background: none;
     border: 0;
